--- a/assets/scss/libs/zoom.css
+++ b/assets/scss/libs/zoom.css
@@ -54,6 +54,13 @@
   float: right;
 }
 
+@media (max-width: 767.98px) {
+  .small-container .show-small-img {
+    height: 75px;
+    width: 75px;
+  }
+}
+
 .small-container .show-small-img:last-of-type { margin-right: 0; }
 
 .show-small-img[alt="now"] {
