--- a/main.css
+++ b/main.css
@@ -788,7 +788,7 @@ a:hover {
 @media (max-width: 575.98px) {
   .index-header .header-content h1 {
     width: 100%;
-    font-size: 65px;
+    font-size: 45px;
   }
 }
 .index-header .header-content h6 {
@@ -811,7 +811,7 @@ a:hover {
 @media (max-width: 575.98px) {
   .index-header .header-content h6 {
     width: 100%;
-    font-size: 80px;
+    font-size: 55px;
   }
 }
 .index-header .header-content p {
@@ -853,7 +853,7 @@ a:hover {
   direction: rtl;
 }
 .index-header .header-content .header-content-actions a {
-  width: 310px;
+  width: 250px;
   height: 62px;
   font-weight: 400;
   font-size: 24px;
@@ -861,7 +861,7 @@ a:hover {
 }
 @media (max-width: 575.98px) {
   .index-header .header-content .header-content-actions a {
-    font-size: 0.8rem;
+    font-size: 20px;
   }
 }
 .index-header .header-content .header-content-actions .signup {
@@ -923,7 +923,17 @@ a:hover {
 .index-header .header-content .header-img {
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: -100px;
+}
+@media (max-width: 1199.98px) {
+  .index-header .header-content .header-img {
+    left: -245px;
+  }
+}
+@media (max-width: 991.98px) {
+  .index-header .header-content .header-img {
+    display: none;
+  }
 }
 .index-header .header-content .header-img:before {
   content: "";
@@ -970,6 +980,7 @@ a:hover {
   border-radius: 8px;
   box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.1019607843);
   padding: 25px;
+  margin-bottom: 12px;
 }
 .products .product-card img {
   width: 100%;
@@ -1042,6 +1053,11 @@ a:hover {
   justify-content: center;
   margin-top: 25px;
 }
+@media (max-width: 575.98px) {
+  .products .load-more {
+    margin-right: -50px;
+  }
+}
 .products .load-more a {
   width: 270px;
   height: 50px;
@@ -1051,7 +1067,7 @@ a:hover {
 }
 @media (max-width: 575.98px) {
   .products .load-more a {
-    font-size: 0.8rem;
+    font-size: 30px;
   }
 }
 .products .load-more .signup {
@@ -1097,13 +1113,28 @@ footer img {
 footer .footer-text {
   padding-right: 100px;
 }
+@media (max-width: 575.98px) {
+  footer .footer-text {
+    padding-right: 50px;
+  }
+}
 footer h3 {
   color: #E1A294;
   font-size: 80px;
 }
+@media (max-width: 575.98px) {
+  footer h3 {
+    font-size: 60px;
+  }
+}
 footer h5 {
   color: #291C5A;
   font-size: 48px;
+}
+@media (max-width: 575.98px) {
+  footer h5 {
+    font-size: 35px;
+  }
 }
 footer .footer-links-container {
   background: #F1B9AC;
@@ -1114,10 +1145,23 @@ footer .footer-links {
   align-items: center;
   justify-content: space-between;
 }
+@media (max-width: 575.98px) {
+  footer .footer-links {
+    display: block;
+  }
+}
+@media (max-width: 767.98px) {
+  footer .footer-links .footer-icons {
+    display: block;
+    text-align: center;
+    justify-content: center;
+  }
+}
 footer .footer-links .footer-icons ul {
   list-style: none;
   display: flex;
   align-items: center;
+  justify-content: center;
   margin: 0;
 }
 footer .footer-links .footer-icons ul li {
@@ -1128,6 +1172,12 @@ footer .footer-links .footer-icons ul li a {
 }
 footer .footer-links .footer-icons ul li a svg {
   fill: #FFF;
+}
+@media (max-width: 767.98px) {
+  footer .footer-links .footer-icons ul li a svg {
+    height: 25px;
+    width: 25px;
+  }
 }
 
 .product-details-page .product-details {
@@ -1168,14 +1218,31 @@ footer .footer-links .footer-icons ul li a svg {
 .product-details-page .product-text {
   padding-right: 50px;
 }
+@media (max-width: 991.98px) {
+  .product-details-page .product-text {
+    padding-right: 0;
+    padding-top: 100px;
+  }
+}
 .product-details-page .product-text h3 {
   color: #E1A294;
   font-size: 48px;
 }
+@media (max-width: 575.98px) {
+  .product-details-page .product-text h3 {
+    font-size: 40px;
+  }
+}
 .product-details-page .product-text p {
   color: #000;
   font-size: 20px;
-  margin-bottom: 100px;
+  margin-bottom: 75px;
+}
+@media (max-width: 575.98px) {
+  .product-details-page .product-text p {
+    font-size: 18px;
+    margin-bottom: 50px;
+  }
 }
 .product-details-page .product-text .price-container {
   display: flex;
@@ -1186,10 +1253,20 @@ footer .footer-links .footer-icons ul li a svg {
   margin-left: 25px;
   font-size: 64px;
 }
+@media (max-width: 575.98px) {
+  .product-details-page .product-text .price-container h5 {
+    font-size: 50px;
+  }
+}
 .product-details-page .product-text .price-container span h5 {
   color: #DDDDDD;
   font-size: 48px;
   position: relative;
+}
+@media (max-width: 575.98px) {
+  .product-details-page .product-text .price-container span h5 {
+    font-size: 30px;
+  }
 }
 .product-details-page .product-text .price-container span h5:after {
   content: "";
@@ -1256,4 +1333,19 @@ footer .footer-links .footer-icons ul li a svg {
   text-align: center;
   line-height: 87.76px;
   margin-top: 50px;
+}
+@media (max-width: 1199.98px) {
+  .product-details-page .product-text .buy-btn {
+    height: 80px;
+    width: 400px;
+    font-size: 40px;
+  }
+}
+@media (max-width: 575.98px) {
+  .product-details-page .product-text .buy-btn {
+    height: 50px;
+    width: 300px;
+    font-size: 20px;
+    line-height: 54px;
+  }
 }/*# sourceMappingURL=main.css.map */
