--- a/main.scss
+++ b/main.scss
@@ -211,7 +211,7 @@ a {
             }
             @media (max-width: $max-5) {
                 width: 100%;
-                font-size: 65px;
+                font-size: 45px;
             }
         }
         h6 {
@@ -228,7 +228,7 @@ a {
             }
             @media (max-width: $max-5) {
                 width: 100%;
-                font-size: 80px;
+                font-size: 55px;
             }
         }
         
@@ -262,13 +262,13 @@ a {
             margin-top: 35px;
             direction: rtl;
             a {
-                width: 310px;
+                width: 250px;
                 height: 62px;
                 font-weight: 400;
                 font-size: 24px;
                 position: relative;
                 @media (max-width: $max-5) {
-                    font-size: 0.8rem;
+                    font-size: 20px;
                 }
             }
             .signup {
@@ -329,7 +329,13 @@ a {
         .header-img {
             position: absolute;
             bottom: 0;
-            left: 0;
+            left: -100px;
+            @media (max-width: $max-12) {
+                left: -245px;
+            }
+            @media (max-width: $max-9) {
+                display: none;
+            }
             &:before {
                 content: "";
                 display: inline-block;
@@ -379,6 +385,7 @@ a {
         border-radius: 8px;
         box-shadow: 0px 0px 20px 2px #0000001A;
         padding: 25px;
+        margin-bottom: 12px;
         img {
             width: 100%;
             height: 200px;
@@ -446,6 +453,9 @@ a {
         align-items: center;
         justify-content: center;
         margin-top: 25px;
+        @media (max-width: $max-5) {
+            margin-right: -50px;
+        }
         a {
             width: 270px;
             height: 50px;
@@ -453,7 +463,7 @@ a {
             font-size: 32px;
             position: relative;
             @media (max-width: $max-5) {
-                font-size: 0.8rem;
+                font-size: 30px;
             }
         }
         .signup {
@@ -499,14 +509,23 @@ footer {
     }
     .footer-text {
         padding-right: 100px;
+        @media (max-width: $max-5) {
+            padding-right: 50px;
+        }
     }
     h3 {
         color: #E1A294;
         font-size: 80px;
+        @media (max-width: $max-5) {
+            font-size: 60px;
+        }
     }
     h5 {
         color: #291C5A;
         font-size: 48px;
+        @media (max-width: $max-5) {
+            font-size: 35px;
+        }
     }
     .footer-links-container {
         background: #F1B9AC;
@@ -516,11 +535,20 @@ footer {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @media (max-width: $max-5) {
+            display: block;
+        }
         .footer-icons {
+            @media (max-width: $max-7) {
+                display: block;
+                text-align: center;
+                justify-content: center;
+            }
             ul {
                 list-style: none;
                 display: flex;
                 align-items: center;
+                justify-content: center;
                 margin: 0;
                 li {
                     margin: 0 15px;
@@ -528,6 +556,10 @@ footer {
                         display: block;
                         svg {
                             fill: #FFF;
+                            @media (max-width: $max-7) {
+                                height: 25px;
+                                width: 25px;
+                            }
                         }
                     }
                 }
@@ -577,14 +609,25 @@ footer {
      }
      .product-text {
         padding-right: 50px;
+        @media (max-width: $max-9) {
+            padding-right: 0;
+            padding-top: 100px;
+        }
         h3 {
             color: #E1A294;
             font-size: 48px;
+            @media (max-width: $max-5) {
+                font-size: 40px;
+            }
         }
         p {
             color: #000;
             font-size: 20px;
-            margin-bottom: 100px; 
+            margin-bottom: 75px;
+            @media (max-width: $max-5) {
+                font-size: 18px;
+                margin-bottom: 50px;
+            }
         }
         .price-container {
             display: flex;
@@ -593,12 +636,18 @@ footer {
                 color: #291C5A;
                 margin-left: 25px;
                 font-size: 64px;
+                @media (max-width: $max-5) {
+                    font-size: 50px;
+                }
             }
             span {
                 h5 {
                     color: #DDDDDD;
                     font-size: 48px;
                     position: relative;
+                    @media (max-width: $max-5) {
+                        font-size: 30px;
+                    }
                     &:after {
                         content: "";
                         background: #DC9F91;
@@ -672,6 +721,17 @@ footer {
             text-align: center;
             line-height: 87.76px;
             margin-top: 50px;
+            @media (max-width: $max-12) {
+                height: 80px;
+                width: 400px;
+                font-size: 40px;
+            }
+            @media (max-width: $max-5) {
+                height: 50px;
+                width: 300px;
+                font-size: 20px;
+                line-height: 54px;
+            }
         }
      }
 }
