--- a/main.css
+++ b/main.css
@@ -1150,6 +1150,13 @@ footer .footer-links {
     display: block;
   }
 }
+footer .footer-links .footer-logo {
+  margin-bottom: 15px;
+}
+footer .footer-links .footer-logo img {
+  max-width: 100%;
+  height: 75px;
+}
 @media (max-width: 767.98px) {
   footer .footer-links .footer-icons {
     display: block;
